Test conflict 1231321 main.html

--- a/main.html
+++ b/main.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-	<p>Other string</p>
-  <h2>Random string</h2>
+<p>Other string</p>
+<h2>Random string</h2>
+<p>Another random string</p>
 </body>
 <html>
