It's just a simple test.

--- a/main.html
+++ b/main.html
@@ -4,8 +4,6 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-	<p>Other string</p>
-<p>bruh</p>
-<p>Another random string</p>
+<p>Something</p>
 </body>
 <html>
