--- a/main.html
+++ b/main.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-<link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
     <p>Joanne smells</p>
-<p>Something</p>
-</body>
-<html>
+    <p>Something</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+      blanditiis iusto laudantium, odio earum tempore. Nemo magni amet saepe
+      blanditiis!
+    </p>
+  </body>
+  <html></html>
+</html>
