--- a/starterPage.html
+++ b/starterPage.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-  <body>
-  </body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css" />
+	</head>
+	<body>
+	</body>
+	<script src="script.js"></script>
 </html>
