added credit button

--- a/starterPage/starterPage.html
+++ b/starterPage/starterPage.html
@@ -64,6 +64,8 @@
     <div class="box" onclick="location.href='#'">
       <h2>Quit &#128545;</h2>
     </div>
-  </div>
+    <div class="box" onclick="location.href='#'">
+      <h2>Credits</h2>
+    </div>
 </body>
 </html>
