--- a/starterPage/starterPage.html
+++ b/starterPage/starterPage.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('Title_Screen_Background.jpg');
+      background-image: url('ancient-egypt-wallpaper.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       font-family: Arial, sans-serif;
@@ -31,7 +31,7 @@
     .box {
       width: 250px;
       height: 75px;
-      background-image: url('box_background.jpg');
+      background-image: url('PlayButton.png');
       background-size: cover;
       background-color: lightblue;
       background-repeat: no-repeat;
