--- a/starterPage/starterPage.html
+++ b/starterPage/starterPage.html
@@ -3,56 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-  <title>Albatre Caravan</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-image: url('ancient-egypt-wallpaper.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column; /* Set flex direction to column */
-      align-items: flex-start; /* Align items to the left */
-      height: 100vh;
-    }
-    .title {
-      font-size: 48px; /* Increase font size */
-      color: #f4150d; /* Change text color to white */
-      margin: 20px 0; /* Add margin to the top and bottom */
-    }
-    .container {
-      display: flex;
-      flex-direction: column; /* Set flex direction to column */
-      align-items: flex-start; /* Align to the left */
-      margin-left: 20px; /* Add some margin for spacing */
-    }
-    .box {
-      width: 250px;
-      height: 75px;
-      background-image: url('PlayButton.png');
-      background-size: cover;
-      background-color: lightblue;
-      background-repeat: no-repeat;
-      border-radius: 10px;
-      text-align: center;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-      margin-bottom: 20px;
-    }
-    .box:hover {
-      transform: scale(1.05);
-    }
-    .box:hover h2 {
-      color: burlywood;
-    }
-    h2 {
-      color: #000;
-    }
-  </style>
+  <title>Alabaster Caravan</title>
 </head>
 <body>
   <div class="box-title">
