--- a/starterPage/starterPage.html
+++ b/starterPage/starterPage.html
@@ -14,7 +14,7 @@
     <source src="nassam.mp3" type="audio/mpeg">
   </audio>
   <div class="container-style">
-    <div class="box-style"> <!-- Play -->
+    <div id="play" class="box-style"> <!-- Play -->
       <h2>Play</h2>
     </div>
     <div class="box-style"> <!-- Settings -->
@@ -23,10 +23,10 @@
     <div class="box-style"> <!-- Exit -->
       <h2>Exit</h2>
     </div>
-    <div class="box-credits"> <!-- Credits -->
+    <div id="credits" class="box-credits"> <!-- Credits -->
       <h2>Credits</h2>
     </div>
   </div>
-  
 </body>
+<script src="starterScript.js"></script>
 </html>
