--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-  <body>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <title>Alabaster Caravan</title>
+    </head>
+    <body>
+        <div id="top menu">
+            <div id="escapeBox"><img src="Images/back_arrow.png"></div>
+            <ul class="ressources">
+                <li id="nb_water"> <img src="Images/ressource.png"> 5 </li>
+                <li id="nb_food"> <img src="Images/ressource.png"> 6 </li>
+                <li id="nb_money"> <img src="Images/ressource.png"> 7 </li>
+                <li id="nb_crew"> <img src="Images/ressource.png"> 7 </li>
+                <li id="nb_elem"> <img src="Images/ressource.png"> 7 </li>
+            </ul>
+        </div>
+        <div id="middle menu"><img id="center-image" src="Images/Illustration.jpg"></div>
+        <div id="bottom menu">
+            <div class="buttons">
+                <div id="inventoryButton" class="strangeButton"> <a href="inventory.html"> <img src="Images/ressource.png"> </a> </div>
+                <div id="unitsButton" class="strangeButton"> <a href="units.html"> <img src="Images/ressource.png"> </a> </div>
+                <div id="loreButton" class="strangeButton"> <a href="lore.html"> <img src="Images/ressource.png"> </a> </div>
+            </div>
+            <div id="actionMenu"></div>
+        </div>
+    </body>
+    <script src="main.js"></script>
 </html>
