Bunch of changes, game is gaming

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -8,21 +8,21 @@
     </head>
     <body>
         <div id="top menu">
-            <div id="escapeBox"><img src="Images/back_arrow.png"></div>
+            <div id="escapeBox"><img src="../Images/back_arrow.png"></div>
             <ul class="ressources">
-                <li id="nb_water"> <img src="Images/ressource.png"> 5 </li>
-                <li id="nb_food"> <img src="Images/ressource.png"> 6 </li>
-                <li id="nb_money"> <img src="Images/ressource.png"> 7 </li>
-                <li id="nb_crew"> <img src="Images/ressource.png"> 7 </li>
-                <li id="nb_elem"> <img src="Images/ressource.png"> 7 </li>
+                <li id="nb_water"> <img src="../Images/ressource.png"> 5 </li>
+                <li id="nb_food"> <img src="../Images/ressource.png"> 6 </li>
+                <li id="nb_money"> <img src="../Images/ressource.png"> 7 </li>
+                <li id="nb_crew"> <img src="../Images/ressource.png"> 7 </li>
+                <li id="nb_elem"> <img src="../Images/ressource.png"> 7 </li>
             </ul>
         </div>
-        <div id="middle menu"><img id="center-image" src="Images/Illustration.jpg"></div>
+        <div id="middle menu"><img id="center-image" src="../Images/Illustration.jpg"></div>
         <div id="bottom menu">
             <div class="buttons">
-                <div id="inventoryButton" class="strangeButton"> <a href="inventory.html"> <img src="Images/ressource.png"> </a> </div>
-                <div id="unitsButton" class="strangeButton"> <a href="units.html"> <img src="Images/ressource.png"> </a> </div>
-                <div id="loreButton" class="strangeButton"> <a href="lore.html"> <img src="Images/ressource.png"> </a> </div>
+                <div id="inventoryButton" class="strangeButton"> <a href="inventory.html"> <img src="../Images/ressource.png"> </a> </div>
+                <div id="unitsButton" class="strangeButton"> <a href="units.html"> <img src="../Images/ressource.png"> </a> </div>
+                <div id="loreButton" class="strangeButton"> <a href="lore.html"> <img src="../Images/ressource.png"> </a> </div>
             </div>
             <div id="actionMenu"></div>
         </div>
