--- a/starterPage/starterPage.html
+++ b/starterPage/starterPage.html
@@ -15,16 +15,16 @@
   </audio>
   <div class="container-style">
     <div id="play" class="box-style"> <!-- Play -->
-      <h2>Play</h2>
+      <h2><!-- Play --></h2>
     </div>
     <div class="box-style"> <!-- Settings -->
-      <h2>Settings</h2>
+      <h2><!-- Settings --></h2>
     </div>
     <div class="box-style"> <!-- Exit -->
-      <h2>Exit</h2>
+      <h2><!-- Exit --></h2>
     </div>
     <div id="credits" class="box-credits"> <!-- Credits -->
-      <h2>Credits</h2>
+      <h2><!-- Credits --></h2>
     </div>
   </div>
 </body>
