--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -10,11 +10,13 @@
         <div id="top menu">
             <div id="escapeBox"><img src="../Images/back_arrow.png"></div>
             <ul class="ressources">
-                <li id="nb_water"> <img src="../Images/ressource.png"> 5 </li>
-                <li id="nb_food"> <img src="../Images/ressource.png"> 6 </li>
-                <li id="nb_money"> <img src="../Images/ressource.png"> 7 </li>
-                <li id="nb_crew"> <img src="../Images/ressource.png"> 7 </li>
-                <li id="nb_elem"> <img src="../Images/ressource.png"> 7 </li>
+                <li> <img src="../Images/ressource.png"> <p id="nb_water">5</p> </li>
+                <li> <img src="../Images/ressource.png"> <p id="nb_food">5</p> </li>
+                <li> <img src="../Images/ressource.png"> <p id="nb_money">5</p> </li>
+		<li><p id="locationName">Desert</p> </li>
+                <li> <img src="../Images/ressource.png"> <p id="nb_crew">5</p> </li>
+                <li> <img src="../Images/ressource.png"> <p id="nb_morale">5</p> </li>
+		<li> <img src="../Images/ressource.png"> <p id="nb_morale">5</p> </li>
             </ul>
         </div>
         <div id="middle menu"><img id="center-image" src="../Images/Illustration.jpg"></div>
