--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -10,13 +10,13 @@
         <div id="top menu">
             <div id="escapeBox"><img src="../Images/back_arrow.png"></div>
             <ul class="ressources">
-                <li> <img src="../Images/ressource.png"> <p id="nb_water">5</p> </li>
-                <li> <img src="../Images/ressource.png"> <p id="nb_food">5</p> </li>
-                <li> <img src="../Images/ressource.png"> <p id="nb_money">5</p> </li>
+                <li> <img src="../Images/item-water.png"> <p id="nb_water">5</p> </li>
+                <li> <img src="../Images/item-food.png"> <p id="nb_food">5</p> </li>
+                <li> <img src="../Images/item-money.png"> <p id="nb_money">5</p> </li>
 		<li><p id="locationName">Desert</p> </li>
-                <li> <img src="../Images/ressource.png"> <p id="nb_crew">5</p> </li>
-                <li> <img src="../Images/ressource.png"> <p id="nb_morale">5</p> </li>
-		<li> <img src="../Images/ressource.png"> <p id="nb_morale">5</p> </li>
+                <li> <img src="../Images/item-crew.png"> <p id="nb_crew">5</p> </li>
+                <li> <img src="../Images/item-morale.png"> <p id="nb_morale">5</p> </li>
+		<li> <img src="../Images/ressource.png"> <p id="nb_goods">5</p> </li>
             </ul>
         </div>
         <div id="middle menu"><img id="center-image" src="../Images/Illustration.jpg"></div>
