Bottom Left Menus Sprites

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -22,9 +22,9 @@
         <div id="middle menu"><img id="center-image" src="../Images/Illustration.jpg"></div>
         <div id="bottom menu">
             <div class="buttons">
-                <div id="inventoryButton" class="strangeButton"> <a href="inventory.html"> <img src="../Images/ressource.png"> </a> </div>
-                <div id="unitsButton" class="strangeButton"> <a href="units.html"> <img src="../Images/ressource.png"> </a> </div>
-                <div id="loreButton" class="strangeButton"> <a href="lore.html"> <img src="../Images/ressource.png"> </a> </div>
+                <div id="inventoryButton" class="strangeButton"> <a href="inventory.html"> <img src="../Images/menu-inventory.png"> </a> </div>
+                <div id="unitsButton" class="strangeButton"> <a href="units.html"> <img src="../Images/item-crew.png"> </a> </div>
+                <div id="loreButton" class="strangeButton"> <a href="lore.html"> <img src="../Images/menu-lore.png"> </a> </div>
             </div>
             <div id="actionMenu"></div>
         </div>
