Uniques Crew Members + Quality of life changes

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -10,9 +10,9 @@
         <div id="top menu">
             <div id="escapeBox"><img src="../Images/back_arrow.png"></div>
             <ul class="ressources">
-                <li> <img src="../Images/item-water.png"> <p id="nb_water">5</p> </li>
-                <li> <img src="../Images/item-food.png"> <p id="nb_food">5</p> </li>
-                <li> <img src="../Images/item-money.png"> <p id="nb_money">5</p> </li>
+                <li> <img src="../Images/item-water.png"> <p id="nb_water">5</p> <p id="bonus_water"></p></li>
+                <li> <img src="../Images/item-food.png"> <p id="nb_food">5</p> <p id="bonus_food"></p></li>
+                <li> <img src="../Images/item-money.png"> <p id="nb_money">5</p> <p id="bonus_money"></p></li>
 		<li><p id="locationName">Desert</p> </li>
                 <li> <img src="../Images/item-crew.png"> <p id="nb_crew">5</p> </li>
                 <li> <img src="../Images/item-morale.png"> <p id="nb_morale">5</p> </li>
