cououc jai enfin reussi lattribution des roles

--- a/mainPage/AttributionPage/roleAttribution.html
+++ b/mainPage/AttributionPage/roleAttribution.html
@@ -10,7 +10,7 @@
     <div id="roleTab">
       <div id="role">
         <h2>Roles</h2>
-        <button id="roleScout">Scout</button>
+        <button id="roleScout" autofocus>Scout</button>
         <button id="roleGuard">Guard</button>
         <button id="roleCarrier">Carrier</button>
       </div>
@@ -21,7 +21,7 @@
         </h2>
       </div>
     </div>
-
+    <button id="confirm">Confirm</button>
     <script src="roleAttribution.js"></script>
   </body>
 </html>
