--- a/mainPage/shopPage/shop.html
+++ b/mainPage/shopPage/shop.html
@@ -20,13 +20,24 @@
             <h1 class="nameBuyer">BUYER</h1>
             <div id="containerMagasin"></div>
         </div>
-        <div id="generate">
-            <span id="transa">Money: <strong><span id="résultat">100</span></strong></span>
-        </div>
+
         <div id="final">
             <span id="res">Résultat: <strong><span id="finali">0</span></strong></span>
         </div>
+        <div id="triangle"></div>
+        <div id="recap">
+            <div id="generate">
+                <span id="transa">Money: <strong><span id="résultat">100</span></strong></span>
+            </div>
+            <div class="bottom">
+                <button id="terminer">Finish the transaction</button>
+                <button id="continue">Continue</button>
+            </div>
+        </div>
+
     </div>
+    <button id="compute">Compute</button>
+    
     <script src="./shop.js"></script>    
 </body>
 </html>
