Made the game fully workingly loopingly playable

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="top menu">
-            <div id="escapeBox"><img src="../Images/back_arrow.png"></div>
+            <!--<div id="escapeBox"><img src="../Images/back_arrow.png"></div>-->
             <ul class="ressources">
                 <li> <img src="../Images/item-water.png"> <p id="nb_water">5</p> <p id="bonus_water"></p></li>
                 <li> <img src="../Images/item-food.png"> <p id="nb_food">5</p> <p id="bonus_food"></p></li>
