--- a/mainPage/AttributionPage/roleAttribution.html
+++ b/mainPage/AttributionPage/roleAttribution.html
@@ -10,15 +10,16 @@
     <div id="roleTab">
       <div id="role">
         <h2>Roles</h2>
+        <button id="confirm">Close and confirm role attribution</button>
       </div>
       <div id="crewMembers">
         <h2>
           <span id="crew-total"></span><span id="horse-total"></span
-          ><span id="weapon-total"></span>
+          ><span id="weapon-total"></span><span id="portage-total"></span>
         </h2>
       </div>
     </div>
-    <button id="confirm">Confirm</button>
+    
     <script src="roleAttribution.js"></script>
   </body>
 </html>
