--- a/mainPage/AttributionPage/roleAttribution.html
+++ b/mainPage/AttributionPage/roleAttribution.html
@@ -16,10 +16,15 @@
         <h2>
           <span id="crew-total"></span><span id="horse-total"></span
           ><span id="weapon-total"></span><span id="portage-total"></span>
+          <span id="water-total"></span><span id="food-total"></span
+          ><span id="moral-total"></span><span id="money-total"></span>
         </h2>
+        <button id="select-all">Select all</button>
+        <button id="deselect-all">Deselect all</button>
+        <p>Total: <span id="total-skills"></span></p>
       </div>
     </div>
-    
+
     <script src="roleAttribution.js"></script>
   </body>
 </html>
