fixed internal stuff

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -26,9 +26,13 @@
                     <label for="item-type-filter">Filter by Type:</label>
                     <select id="item-type-filter">
                         <option value="all">All Items</option>
-                        <option value="Health">Health</option>
-                        <option value="Weapon">Weapon</option>
-                        <option value="Armor">Armor</option>
+                        <option value="food">Food</option>
+                        <option value="goods">Goods</option>
+                        <option value="mount">Mount</option>
+                        <option value="carrier">Carrier</option>
+                        <option value="weapon">Weapon</option>
+                        <option value="armor">Armor</option>
+                        
                     </select>
                 </div>
                 <!-- Inventory items container -->
