--- a/starterPage/starterPage.html
+++ b/starterPage/starterPage.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Alabaster Caravan</title>
-</head>
-<body>
-  <div class="box-title">
-    <h1>Alabaster Caravan</h1>
-</div>
-  <audio controls autoplay>
-    <source src="nassam.mp3" type="audio/mpeg">
-  </audio>
-  <div class="container-style">
-    <div id="play" class="box-style"> <!-- Play -->
-      <h2>Play</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Alabaster Caravan</title>
+  </head>
+  <body>
+    <div class="box-title">
+      <h1>Alabaster Caravan</h1>
     </div>
-    <div class="box-style"> <!-- Settings -->
-      <h2>Settings</h2>
+    <audio controls autoplay>
+      <source src="nassam.mp3" type="audio/mpeg" />
+    </audio>
+    <div class="container-style">
+      <div id="play" class="box-style">
+        <!-- Play -->
+        <h2>Play</h2>
+      </div>
+      <div class="box-style">
+        <!-- Settings -->
+        <h2>Settings</h2>
+      </div>
+      <div class="box-style">
+        <!-- Exit -->
+        <h2>Exit</h2>
+      </div>
+      <div id="credits" class="box-credits">
+        <!-- Credits -->
+        <h2>Credits</h2>
+      </div>
     </div>
-    <div class="box-style"> <!-- Exit -->
-      <h2>Exit</h2>
-    </div>
-    <div id="credits" class="box-credits"> <!-- Credits -->
-      <h2>Credits</h2>
-    </div>
-  </div>
-</body>
-<script src="starterScript.js"></script>
+  </body>
+  <script src="starterScript.js"></script>
 </html>
