--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -19,7 +19,7 @@
 		        <li> <img src="../Images/ressource.png"> <p id="nb_goods">5</p> </li>
             </ul>
         </div>
-        <div id="middle menu"><img id="center-image" class="visible" src="../Images/Illustration.jpg">
+        <div id="middle menu"><img id="center-image" src="../Images/Illustration.jpg">
             <div id="inventoryPage" class="hidden">
                 <!-- Filter dropdown menu -->
                 <div class="filter-container">
