Work in progress: combat system

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -47,7 +47,7 @@
       </ul>
     </div>
     <div id="middle menu">
-      <img id="center-image" class="visible" src="../Images/Illustration.jpg" />
+      <img id="center-image" src="../Images/Illustration.jpg" />
       <div id="inventoryPage" class="hidden">
         <!-- Filter dropdown menu -->
         <div class="filter-container">
