--- a/mainPage/AttributionPage/roleAttribution.html
+++ b/mainPage/AttributionPage/roleAttribution.html
@@ -11,14 +11,17 @@
       <div id="role">
         <h2>Roles</h2>
         <button id="confirm">Close and confirm role attribution</button>
-      </div>
-      <div id="crewMembers">
+
         <h2>
           <span id="crew-total"></span><span id="horse-total"></span
           ><span id="weapon-total"></span><span id="portage-total"></span>
           <span id="water-total"></span><span id="food-total"></span
           ><span id="moral-total"></span><span id="money-total"></span>
         </h2>
+      </div>
+
+      <div id="crewMembers">
+        <h2>Attribution</h2>
         <button id="select-all">Select all</button>
         <button id="deselect-all">Deselect all</button>
         <p>Total: <span id="total-skills"></span></p>
