ethan muah muah

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -19,7 +19,7 @@
       <!--<div id="escapeBox"><img src="../Images/back_arrow.png"></div>-->
       <ul class="ressources">
         <li class="left-list">
-          <i class="bx bx-water"></i>
+          <i class="bx bx-droplet"></i>
           <p id="nb_water">5</p>
           <p id="bonus_water"></p>
         </li>
@@ -50,7 +50,6 @@
     </div>
 
     <div id="middle menu">
-      <!-- <img id="center-image" src="../Images/Illustration.jpg" /> -->
       <div id="inventoryPage" class="hidden">
         <!-- Filter dropdown menu -->
         <div class="filter-container">
@@ -65,27 +64,9 @@
             <option value="armor">Armor</option>
           </select>
         </div>
-        <div id="middle menu">
-          <img id="center-image" src="../Images/Illustration.jpg" />
-          <div id="inventoryPage" class="hidden">
-            <!-- Filter dropdown menu -->
-            <div class="filter-container">
-              <label for="item-type-filter">Filter by Type:</label>
-              <select id="item-type-filter">
-                <option value="all">All Items</option>
-                <option value="food">Food</option>
-                <option value="goods">Goods</option>
-                <option value="mount">Mount</option>
-                <option value="carrier">Carrier</option>
-                <option value="weapon">Weapon</option>
-                <option value="armor">Armor</option>
-              </select>
-            </div>
-            <!-- Inventory items container -->
-            <div class="inventory-container" id="item-list">
-              <!-- Inventory items will be dynamically added here -->
-            </div>
-          </div>
+        <!-- Inventory items container -->
+        <div class="inventory-container" id="item-list">
+          <!-- Inventory items will be dynamically added here -->
         </div>
       </div>
     </div>
