--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -50,6 +50,7 @@
     </div>
 
     <div id="middle menu">
+      <img id="center-image" src="../Images/Illustration.jpg" />
       <div id="inventoryPage" class="hidden">
         <!-- Filter dropdown menu -->
         <div class="filter-container">
