--- a/mainPage/AttributionPage/roleAttribution.html
+++ b/mainPage/AttributionPage/roleAttribution.html
@@ -11,10 +11,20 @@
       <div id="role">
         <h2>Roles</h2>
 
-        <span id="crew-total"></span><span id="horse-total"></span
-        ><span id="weapon-total"></span><span id="portage-total"></span>
-        <span id="water-total"></span><span id="food-total"></span
-        ><span id="moral-total"></span><span id="money-total"></span>
+        <div class="global-ressources">
+          <div class="left-ressources">
+            <span id="crew-total"></span>
+            <span id="horse-total"></span>
+            <span id="weapon-total"></span>
+            <span id="portage-total"></span>
+          </div>
+          <div class="right-ressources">
+            <span id="water-total"></span>
+            <span id="food-total"></span>
+            <span id="moral-total"></span>
+            <span id="money-total"></span>
+          </div>
+        </div>
 
         <button id="confirm">Close and confirm role attribution</button>
       </div>
