attribution role UI

--- a/mainPage/AttributionPage/roleAttribution.html
+++ b/mainPage/AttributionPage/roleAttribution.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="roleAttribution.css" />
     <title>Role Attribution</title>
   </head>
+
   <body>
     <div id="roleTab">
       <div id="role">
-        <h2>Roles</h2>
+        <h2>Ressources</h2>
 
         <div class="global-ressources">
           <div class="left-ressources">
@@ -25,8 +26,9 @@
             <span id="money-total"></span>
           </div>
         </div>
-
-        <button id="confirm">Close and confirm role attribution</button>
+        <h2 class="role-title">Roles</h2>
+        <div id="role-bis"></div>
+        <button id="confirm">Confirm and close</button>
       </div>
 
       <div id="crewMembers">
