Added music button

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -13,6 +13,13 @@
   </head>
 
   <body>
+    <audio loop id="BackgroundAudio">
+      <source src="../Audio/cinematic-soundtrack-ancient-egypt-869.mp3" type="audio/mpeg">
+      Votre navigateur ne supporte pas l'élément audio.
+  </audio>
+    <button class="speaker-button" onclick="toggleMusic()">
+      <i id="bxSound" class='bx bx-volume-mute' ></i>
+  </button>
     <div class="dark-background"></div>
 
     <div id="top menu">
