--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -40,7 +40,7 @@
           <p id="nb_money">5</p>
           <p id="bonus_money"></p>
         </li>
-        <li class="center-list"><p id="locationName">Desert</p></li>
+        <li class="center-list"><p id="locationName">Nil Shore</p></li>
         <li class="right-list">
           <i class="bx bx-group"></i>
           <p id="nb_crew">5</p>
