Removed href of unused buttons

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -85,10 +85,10 @@
           <i class="bx bx-box"></i>
         </div>
         <div id="unitsButton" class="strangeButton">
-          <a href="units.html"> <i class="bx bx-group"></i> </a>
+          <a> <i class="bx bx-group"></i> </a>
         </div>
         <div id="loreButton" class="strangeButton">
-          <a href="lore.html"> <i class="bx bx-book-open"></i> </a>
+          <a> <i class="bx bx-book-open"></i> </a>
         </div>
       </div>
       <div id="actionMenu"></div>
