--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -14,12 +14,15 @@
 
   <body>
     <audio loop id="BackgroundAudio">
-      <source src="../Audio/cinematic-soundtrack-ancient-egypt-869.mp3" type="audio/mpeg">
+      <source
+        src="../Audio/cinematic-soundtrack-ancient-egypt-869.mp3"
+        type="audio/mpeg"
+      />
       Votre navigateur ne supporte pas l'élément audio.
-  </audio>
+    </audio>
     <button class="speaker-button" onclick="toggleMusic()">
-      <i id="bxSound" class='bx bx-volume-mute' ></i>
-  </button>
+      <i id="bxSound" class="bx bx-volume-mute"></i>
+    </button>
     <div class="dark-background"></div>
 
     <div id="top menu">
@@ -57,6 +60,11 @@
     </div>
 
     <div id="middle menu">
+      <img
+        id="backgroundImage"
+        src="../Images/nil_shore_location.png"
+        alt="Fond"
+      />
       <img id="center-image" src="../Images/Illustration.jpg" />
       <div id="inventoryPage" class="hidden">
         <!-- Filter dropdown menu -->
