--- a/mainPage/shopPage/shop.html
+++ b/mainPage/shopPage/shop.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <div class="dark-background"></div>
     <div class="all">
         <div class="you">
             <h1 class="nameYou">YOU</h1>
@@ -29,10 +30,8 @@
             <div id="generate">
                 <span id="transa">Money: <strong><span id="résultat">100</span></strong></span>
             </div>
-            <div class="bottom">
-                <button id="terminer">Finish the transaction</button>
-                <button id="continue">Continue</button>
-            </div>
+            <button id="terminer">Finish the transaction</button>
+            <!-- <button id="continue">Continue</button> -->
         </div>
 
     </div>
@@ -41,3 +40,4 @@
     <script src="./shop.js"></script>    
 </body>
 </html>
+
