Removed center image (Illustration)

--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -65,7 +65,7 @@
         src="../Images/nil_shore_location.png"
         alt="Fond"
       />
-      <img id="center-image" src="../Images/Illustration.jpg" />
+      <img class="hidden" id="center-image" src="" />
       <div id="inventoryPage" class="hidden">
         <!-- Filter dropdown menu -->
         <div class="filter-container">
