--- a/mainPage/gamePage.html
+++ b/mainPage/gamePage.html
@@ -57,6 +57,8 @@
           <p id="nb_goods">5</p>
         </li>
       </ul>
+
+      <button id="didacticiel"><i class="bx bx-file-blank"></i></button>
     </div>
 
     <div id="middle menu">
